2008-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Removed mention of -write from composite and
	convert help output since it can't work as specified with current
	command line architecture.
	* doc/options.imdoc: Removed documentation for composite and
	convert since it doesn't work.

2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
	sample RGB images.

2008-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.

2008-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Remove some arbitrary
	argument length limits.  Pass -convolve argument without any
	additional checking.  Verify that strings are not truncated during
	copy.
	(ListFiles): Be more memory efficient.
	* magick/fx.c (ConvolveImage): Fix formatting problem when logging
	the convolution kernel used.
	* magick/utility.c (TranslateTextEx): Support formatting huge
	comment text.

2008-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in: Since we removed support for 'spawn' a
	long time ago, and no longer execute using the Unix shell by
	default, we need to add an ampersand to the end of the two entries
	previously using 'spawn' so that the display program does not hang
	when it invokes the external program.
	* coders/preview.c (WritePreviewImage): Solarize requires a
	threshold argument.
	* coders/vid.c (WriteVIDImage): Eliminate memory leak.
	* magick/montage.c (MontageImages): Fix continued use of freed
	memory.

2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/msl_composite.sh: Fix 'rm -f' without a valid
	argument which annoyed NetBSD.

2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.6 released.
	* NEWS.txt: Updated news for release.
