@@ -734,7 +734,7 @@ detect when image file is modified and redisplay.</abs>
 </utils>
 <utils apps=composite,convert>
 <lopt>-write <filename></opt>
-<abs>write  an image sequence [<i>convert, composite</i>]</abs>
+<abs>write an intermediate image [<i>convert, composite</i>]</abs>
 </utils>
 <utils apps=display>
 <lopt>-write <filename></opt>
